add: 가상스레드 내용 추가